# vscode-wasm-component-model-sample

calculator-extn/: CHANGELOG.md  README.md  package-lock.json  package.json
calculator-extn/src/: extension.ts
calculator-impl/: Cargo.toml
calculator-impl/src/: lib.rs
calculator-spin/: Cargo.toml  spin.toml
calculator-spin/src/: bindings.rs  lib.rs
calculator-spin/wit/: world.wit
wit/: calculator.wit
