[package]
name = "calculator-spin"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:calculator-spin"

[package.metadata.component.dependencies]

[package.metadata.component.registries]
default = "https://wasi.wa.dev"

[package.metadata.component.target.dependencies]
"vscode:example" = { path = "../wit"}
"wasi:http" = "0.2.0"
